feat: add role-based authorization (ADMIN-only writes) and referential integrity checks on delete